--- a/dot_config/private_Code/User/settings.json
+++ b/dot_config/private_Code/User/settings.json
@@ -7,14 +7,18 @@
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[django-html]": {
+    // "editor.formatOnSave": true,
+    "editor.defaultFormatter": "monosans.djlint"
+  },
   "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[javascriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": true
-    },
+    }
   },
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter",
@@ -25,7 +29,7 @@
     ],
     "editor.codeActionsOnSave": {
       "source.organizeImports": true
-    },
+    }
   },
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
@@ -59,10 +63,12 @@
   "explorer.compactFolders": false,
   "editor.minimap.enabled": false,
   "workbench.sideBar.location": "right",
+  "zenMode.centerLayout": true,
+  "zenMode.restore": true,
   // Editor Code Style and Misc.
+  "editor.formatOnSaveMode": "modificationsIfAvailable",
   "editor.formatOnSave": true,
-  "editor.formatOnSaveMode": "modifications",
-  "editor.formatOnType": true,
+  //"editor.formatOnType": true,
   "editor.fontLigatures": true,
   "editor.bracketPairColorization.enabled": true,
   "editor.defaultFormatter": null, // Set per language
@@ -73,14 +79,28 @@
   "markdown.extension.toc.updateOnSave": false,
   "emmet.triggerExpansionOnTab": true,
   "emmet.includeLanguages": {
-    "javascript": "javascriptreact"
+    "javascript": "javascriptreact",
+    "django-html": "html"
   },
+  "css.enabledLanguages": [
+    "html",
+    "django-html"
+  ],
+  // "css.styleSheets": [
+  //   "https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+  // ],
   // Experimental
   "window.title": "${activeEditorLong}",
   "editor.formatOnPaste": true,
   "editor.quickSuggestions": {
     "strings": true,
-    "comments": true,
-},
-"editor.snippetSuggestions": "top",
+    "comments": true
+  },
+  "editor.snippetSuggestions": "bottom",
+  "files.associations": {
+    "**/*.html": "html",
+    "**/templates/**/*.html": "django-html",
+    "**/templates/**/*": "django-txt",
+    "**/requirements{/**,*}.{txt,in}": "pip-requirements"
+  }
 }
